# Price_Tracker

./: .gigignore  .gitignore  API_Guide.md  README.md  To-do.md
backend/: .env  .env.example  Cargo.toml
backend/.cargo/: config.toml
backend/migrations/: 0001_init.sql  pricetracker_schema_v2.sql  pricetracker_seed_v2.sql  pricetracker_zz_admin_seed_v2.sql  pricetracker_zzz_system_settings_v2.sql
backend/src/: app.rs  config.rs  error.rs  main.rs  models.rs  state.rs
doc/: API_Guide.md  Database_Guide.md  Dev_doc.md  README.md  pricetracker-openapi-3.1.yaml  pricetracker-project-plan-v2.md
frontend/: .env.debug  .env.production  index.html  nuxt.config.ts  package-lock.json  package.json  vite.config.js
frontend-naive/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend-naive/scripts/: admin-entity.tmpl  admin-users.tmpl  release-app.tmpl  replace-template.mjs
frontend-naive/src/: App.vue  AppRoot.vue  PublicationApp.vue  PublishApp.vue  ReleaseApp.vue  main.js  styles.css
frontend-naive/src/components/: AdminConsolePage.vue  AdminEntityTablePanel.vue  AdminExplorerPanel.vue  AdminModerationPanel.vue  AdminPortalPage.vue  AdminSettingsPanel.vue  AdminUsersPanel.vue  ConfirmDialog.vue  QueuePanel.vue  ResponsePanel.vue  ScannerPanel.vue  UserAccountPanel.vue
frontend-naive/src/composables/: useOnlineStatus.js  useWorkbench.js
frontend-naive/src/data/: currencies.js  endpoints.js
frontend-naive/src/lib/: api.js  scanner.js
frontend/assets/css/: main.css
frontend/pages/: index.vue
frontend/plugins/: app-config.client.js
frontend/server/api/: [...path].ts
frontend/src/: App.vue  DashboardApp.vue  ReleaseApp.vue  config.js  main.js  styles.css
frontend/src/components/: AdminDatabasePanel.vue  (+11 more)
(+3 files in other folders)
