[package]
name = "pricetracker-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7.9", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
http = "1.1"
hyper = { version = "1.5.0", features = ["full"] }
rust_decimal = { version = "1.35.0", features = ["serde-with-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
